manifest/objects/DMMAX__DIESetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>DMMAX__Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__CRON__c</fullName>
        <description>Seconds Minutes Hours Day_of_month Month Day_of_week Optional_year
https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_scheduler.htm</description>
        <inlineHelpText>How often the batch process should occur</inlineHelpText>
        <label>Batch Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__ChatterDaysToRepeat__c</fullName>
        <label>Chatter Days To Repeat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__Disable_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Disable_Collaboration_Map_Node_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Collaboration Map Node Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Disable_Collaboration_Map_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Collaboration Map Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Disable_Competitor_Extra_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Competitor Extra Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Disable_Criterion_Answer_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Criterion Answer Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Disable_Dealmaker_Opportunity_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Dealmaker Opportunity Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Disable_Decision_Criterion_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Decision Criterion Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Disable_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Disable_Insight_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Insight Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Disable_Panel_Caching__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Max uses Dealmaker&apos;s protected update to change signals</description>
        <label>Use protected update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Disable_Phase_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Phase Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Disable_Pol_Map_Contact_LastMod_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Pol Map Contact LastMod Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Disable_Political_Map_Contact_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Political Map Contact Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Disable_Source_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Scope Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Disable_TI_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable the T&amp;I trigger</description>
        <label>Disable T&amp;I Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Disable_Task_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Task Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__EmailDaysToRepeat__c</fullName>
        <label>Days To Repeat Insight in Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__EmailDurationGap__c</fullName>
        <description>Number of days between sending digest emails</description>
        <label>Email Duration Gap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__EmailToUserId__c</fullName>
        <label>Email To UserId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__Email_Managers__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Email Managers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Email_Users__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Email Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Enable_Localization__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allow localization of insights</inlineHelpText>
        <label>Enable Localization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Enable_Max_Library_Export_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Max Library Export/Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__FLS_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FLS Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__LastEmail__c</fullName>
        <label>LastEmail</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMMAX__Namespace__c</fullName>
        <label>Namespace</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__OM_Phase_Late__c</fullName>
        <description>At what confidence percentage should we consider the opportunity to be in a late stage</description>
        <label>OM Phase Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMMAX__OM_Phase_Mid__c</fullName>
        <description>At what confidence percentage should we consider the opportunity to be mid life</description>
        <label>OM Phase Mid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMMAX__OrgWideEmailAddressId__c</fullName>
        <label>Org Wide Email Address Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__RandomizeInsights__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Insights, when shown to the user in the panel or email, are randomized within their priority levels.</description>
        <label>Randomize Insights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__RefCount__c</fullName>
        <label>RefCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Altify Max</label>
</CustomObject>